# esp32_btl_vxl

./: .gitignore  README.md  analyze_csv.py  read_and_plot.py  read_and_plot_filtered.py  requirements.txt  yeah.c
esp32_i2c_lcd/: .clangd  sdkconfig
esp32_i2c_lcd/components/ad8232/: CMakeLists.txt  ad8232.c  ad8232.h
esp32_i2c_lcd/components/max30102/: CMakeLists.txt  max30102.c  max30102.h
esp32_i2c_lcd/components/uart_packet/: CMakeLists.txt  uart_packet.c  uart_packet.h
esp32_i2c_lcd/components/wifi_udp/: CMakeLists.txt  wifi_udp.c  wifi_udp.h
esp32_i2c_lcd/main/: CMakeLists.txt  main.c
esp32_i2c_lcd/peripheral/: ad8232.c  ad8232.h  lcd.c  lcd.h  sensors.c  sensors.h
lcd_I2C/: .clangd
lcd_I2C/main/: main.c
